# engine

./: .gitignore  CMakeLists.txt  README.org  flake.nix
lib/glad/include/glad/: gl.h  glad.h
lib/glad/src/: glad.c
src/: colours.cpp  main.cpp
